src/test/ui/parser/issue-81804.stderr
error: this file contains an unclosed delimiter
  --> $DIR/issue-81804.rs:9:11
   |
LL | fn p([=(}
   |     --    ^
   |     ||
   |     |unclosed delimiter
   |     unclosed delimiter

error: this file contains an unclosed delimiter
  --> $DIR/issue-81804.rs:9:11
   |
LL | fn p([=(}
   |     --    ^
   |     ||
   |     |unclosed delimiter
   |     unclosed delimiter

error: expected pattern, found `=`
  --> $DIR/issue-81804.rs:9:7
   |
LL | fn p([=(}
   |       ^ expected pattern

error: expected one of `)`, `,`, `->`, `where`, or `{`, found `]`
  --> $DIR/issue-81804.rs:9:8
   |
LL | fn p([=(}
   |        ^ -^
   |        | |
   |        | help: `)` may belong here
   |        unclosed delimiter

error: expected item, found `]`
  --> $DIR/issue-81804.rs:9:11
   |
LL | fn p([=(}
   |           ^ expected item

error: aborting due to 5 previous errors

